Tue Nov 16 00:21:20 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* regparse.c (and_cclass, or_cclass): fix memory leak.  Coverity Scan
	  found this bug.  [ruby-dev:42579]

Tue Nov 16 00:07:32 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* gc.c (assign_heap_slot): fix fear of memory leak and memory
	  violation.  Coverity Scan found this bug.

Mon Nov 15 23:54:45 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* eval_intern.h (CHECK_STACK_OVERFLOW): it was not intended to add
	  size_t to a pointer typed VALUE*.  Coverity Scan found this defect.

Mon Nov 15 23:41:21 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* compile.c (iseq_set_exception_local_table, iseq_set_local_table,
	  rb_iseq_build_from_ary): fix type inconsistency (which is benign
	  because sizeof(ID) == sizeof(ID*), though).  Coverity Scan found
	  these bugs.

Mon Nov 15 22:47:27 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* vm_eval.c (rb_funcall): ensure va_end after va_init_list.  Coverity
	  Scan found this bug.

Mon Nov 15 08:36:12 2010  Aaron Patterson <aaron@tenderlovemaking.com>

	* lib/racc/parser.rb (do_parse, yyparse): using class eval to define
	  method and avoid __send__.

Mon Nov 15 06:43:48 2010  Aaron Patterson <aaron@tenderlovemaking.com>

	* etc/openssl/ossl_ssl.c (ossl_ssl_get_cert): raise exception if
	  pointer is invalid.  Thanks Ippei Obayashi! [ruby-dev:42573]

Sun Nov 14 17:57:45 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* enc/Makefile.in (distclean): should not remove sources which are
	  distributed in tarball.

Sun Nov 14 16:48:56 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (parser_set_token_info): turn on/off with directives.
	  [ruby-core:25442]

Sun Nov 14 12:05:24 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (argf_readlines): forward to current_file for arguments
	  check.  http://twitter.com/nagachika/status/3634254856589312

Sun Nov 14 08:48:06 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/setup.mak (-basic-vars-, -runtime-): suppress trailing